Trying to figure out how to use the scrape function.

--- a/mission_to_mars.ipynb
+++ b/mission_to_mars.ipynb
@@ -25,8 +25,8 @@
    "source": [
     "#!pip install webdriver-manager\n",
     "from selenium import webdriver\n",
-    "from webdriver_manager.chrome import ChromeDriverManager\n",
-    "driver = webdriver.Chrome(ChromeDriverManager().install())\n",
+    "#from webdriver_manager.chrome import ChromeDriverManager\n",
+    "#driver = webdriver.Chrome(ChromeDriverManager().install())\n",
     "from splinter import Browser\n",
     "from bs4 import BeautifulSoup\n",
     "import pandas as pd\n",
